--- a/ConsumeSpotifyWebAPI/Views/Home/Index.cshtml
+++ b/ConsumeSpotifyWebAPI/Views/Home/Index.cshtml
@@ -4,17 +4,92 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="row">
-     @foreach (var item in Model)
-        {
-            <div class="card m-1" style="width:350px;">
-                <div class="card-body">
-                    <h5 class="card-title">@Html.DisplayFor(modelItem => item.Artists)</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.Name)</h6>
-                    <p class="card-text">@Html.DisplayFor(modelItem => item.Date)</p>
-                    <img src="@Html.DisplayFor(modelItem => item.ImageUrl)" width="300" height="300" alt="Release picture" />
-                    <a href="@Html.DisplayFor(modelItem => item.Link)" target="_blank">Listen</a>
-                </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Index", "Home", new { tab = "new-releases" })">New Releases</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Index", "Home", new { tab = "recommendations" })">Get Recommendations</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container mt-3">
+    @if (ViewData["Tab"]?.ToString() == "new-releases")
+    {
+        <h2>New Releases</h2>
+        <div class="row">
+            @if (Model.Any())
+            {
+                @foreach (var item in Model)
+                {
+                    <div class="card m-1" style="width:350px;">
+                        <div class="card-body">
+                            <h5 class="card-title">@Html.DisplayFor(modelItem => item.Artists)</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.Name)</h6>
+                            <p class="card-text">@Html.DisplayFor(modelItem => item.Date)</p>
+                            <img src="@Html.DisplayFor(modelItem => item.ImageUrl)" width="300" height="300" alt="Release picture" />
+                            <a href="@Html.DisplayFor(modelItem => item.Link)" target="_blank">Listen</a>
+                        </div>
+                    </div>
+                }
+            }
+            else
+            {
+                <p>No data available</p>
+            }
+        </div>
+    }
+    else if (ViewData["Tab"]?.ToString() == "recommendations")
+    {
+        <h2>Get Recommendations</h2>
+        <form method="post" asp-action="Index">
+            <div class="form-group d-flex align-items-center">
+                <label for="genreSelect" style="margin-right: 10px;">Select Genre</label>
+                <select id="genreSelect" name="genre" class="form-control" style="margin-right: 20px;">
+                    @if (ViewData["Genres"] is IEnumerable<string> genres)
+                    {
+                        @foreach (var genre in genres)
+                        {
+                            <option value="@genre">@genre</option>
+                        }
+                    }
+                    else
+                    {
+                        <option value="" disabled>No genres available</option>
+                    }
+                </select>
+                <input type="hidden" name="tab" value="recommendations" />
+                <button type="submit" class="btn btn-primary">Get Recommendations</button>
             </div>
-        }
+        </form>
+
+        <div class="container mt-3">
+            @if (Model != null && Model.Any())
+            {
+                <h3>Recommended Tracks:</h3>
+                <div class="row">
+                    @foreach (var item in Model)
+                    {
+                        <div class="card m-1" style="width:350px;">
+                            <div class="card-body">
+                                <h5 class="card-title">@Html.DisplayFor(modelItem => item.Artists)</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.Name)</h6>
+                                <p class="card-text">@Html.DisplayFor(modelItem => item.Date)</p>
+                                <img src="@Html.DisplayFor(modelItem => item.ImageUrl)" width="300" height="300" alt="Release picture" />
+                                <a href="@Html.DisplayFor(modelItem => item.Link)" target="_blank">Listen</a>
+                            </div>
+                        </div>
+                    }
+                </div>
+            }
+            else
+            {
+                <p>No recommendations available. Please select a genre.</p>
+            }
+        </div>
+    }
 </div>
